--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt-blacklist": "^1.1.0",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-redis": "^6.0.0",
     "mongoose": "^6.0.1",
+    "redis": "^3.1.2",
     "uuid": "^8.3.2"
   }
 }
